
[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"


# ----------------------------------------- setuptools -------------------------------------------
[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true


# ----------------------------------------- Project Metadata -------------------------------------
#
[project]
version = "0.0.0.dev246"
name = "RepoDynamics"
dependencies = [
    "packaging >= 23.2, < 24",
    "pre-commit == 3.3.3",
    "jsonschema >= 4.19, < 5",
    "trove-classifiers",
    "readme-renderer[md]",
    "pylinks",
    "markitup",
    "pycolorit",
    "pybadger",
    "github-contexts",
    "conventional_commits",
    "actionman",
    "pyserials"
]
requires-python = ">=3.10"


#[project.scripts]
#rd-print = "repodynamics.actions._print:main"
#repodynamics-get-metadata = "pypackit.metadata:__main__"
#repodynamics-sync-files = "pypackit.templates:__main__"
#repodynamics-deploy = "pypackit.cd:__main__"